<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="48dp"
    android:background="@drawable/header_bg"
    >
    <View android:layout_height="fill_parent"
        android:layout_width="1px"
        android:background="#4D000000"/>
    <ImageButton
        android:id="@+id/backD"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/back2"
        android:enabled="true"
        android:layout_weight="1"
        android:src="@drawable/ic_action_previous_item"
        style="?android:attr/actionButtonStyle"
        android:contentDescription="@string/back2" />
    <View android:layout_height="fill_parent"
        android:layout_width="1px"
        android:background="#4D000000"/>
    <ImageButton
        android:id="@+id/refreshD"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/refresh2"
        android:enabled="true"
        android:layout_weight="1"
        android:src="@drawable/ic_action_refresh"
        style="?android:attr/actionButtonStyle"
        android:contentDescription="@string/refresh2" />
    <View android:layout_height="fill_parent"
        android:layout_width="1px"
        android:background="#4D000000"/>
    <ImageButton
        android:id="@+id/closeD"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/close2"
        android:enabled="true"
        android:layout_weight="1"
        android:src="@drawable/ic_action_cancel"
        style="?android:attr/actionButtonStyle"
        android:contentDescription="@string/close2" />
    <View android:layout_height="fill_parent"
        android:layout_width="1px"
        android:background="#4D000000"/>
    <ImageButton
        android:id="@+id/forwardD"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/forward2"
        android:enabled="true"
        android:layout_weight="1"
        android:src="@drawable/ic_action_next_item"
        style="?android:attr/actionButtonStyle"
        android:contentDescription="@string/forward2" />
    <View android:layout_height="fill_parent"
        android:layout_width="1px"
        android:background="#4D000000"/>
</LinearLayout>
